# creature

./: CLAUDE.md  README.md  bookmarks.py  config.ini  config.spec  creature.py  creature.sh  creature_config.py  keepassxc_bridge.js  keepassxc_manager.py  profiles.py  pyproject.toml  ssl_handler.py  test_keepassxc.py  themes.py  utilities.py  web_engine.py
creature/: __init__.py  __main__.py
creature/browser/: __init__.py  main.py
creature/config/: __init__.py  manager.py  profiles.py
creature/history/: __init__.py  database.py  manager.py
creature/security/: __init__.py  keepassxc.py  ssl_handler.py
creature/ui/: __init__.py  bookmarks.py  history_editor.py  themes.py  url_autocomplete.py
creature/utils/: __init__.py  helpers.py
data/config/: config.ini  config.spec
data/config/themes/: dark.ini  earthy.ini  forest.ini  slate.ini
docs/: bug-fixes.md  command-line-usage.md  configuration.md  gui-improvements.md  hyprland-configuration.md  keepassxc-integration.md  keyboard-shortcuts.md  quickstart.md  themes.md  ui-scaling.md
scripts/: creature
tests/: __init__.py
themes/: autumn.ini  dark.ini  earthy.ini  forest.ini  light.ini  nord.ini  slate.ini  theme.spec  violet.ini
